--- a/style.css
+++ b/style.css
@@ -9,18 +9,17 @@ body{
 
 .wrapper{
     width: 100%;
-    max-width: 960px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 .flex-container{
     display: flex;
     background: #fff;
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
 }
 .box{
     height: 100px;
-    width: 200px;
-    flex-grow: 1;
+    flex: 1 0 200px;
 }
 .one{
     background: red;
