--- a/style.css
+++ b/style.css
@@ -16,10 +16,13 @@ body{
     display: flex;
     background: #fff;
     flex-wrap: wrap;
+    flex-flow: column;
+    justify-content: flex-end;
+    height: 800px;
 }
 .box{
     height: 100px;
-    flex: 1 0 200px;
+    flex: 0 0 100px;
 }
 .one{
     background: red;
